# stock_analyzer_app

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
proj/: app.py  check.ipynb  data.py  getData.py  portfolio.py  strategy.py  visualize.py
