[project]
name = "stock_analyzer_app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "lxml>=6.0.4",
    "matplotlib>=3.10.9",
    "matplotlib-fontja>=1.1.0",
    "nbconvert>=7.17.1",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "streamlit>=1.57.0",
    "yfinance>=1.3.0",
]
package-mode = false
